# flovenet

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.fast  Plan_Integrado_Red_Descentralizada.txt  README.md  deny.toml  docker-compose.yml  plan-crossplatform.md  plan.md
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
.work/: .gitignore  progress.md  test-discovery.sh  test-docker.sh
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/flovenet/app/: MainActivity.kt  NativeBridge.kt
android/app/src/main/java/com/flovenet/app/network/: GraphQLClient.kt
android/app/src/main/java/com/flovenet/app/ui/: DashboardScreen.kt  FeedScreen.kt  LoginScreen.kt  ProfileScreen.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cli/: Cargo.toml
cli/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: error.rs  lib.rs
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/networking/: discovery.rs  gossip.rs  mod.rs  swarm.rs
daemon/web/: app.js  index.html  style.css
deb-pkg/DEBIAN/: control  postinst  prerm
deb-pkg/lib/systemd/system/: flovenet-daemon.service  flovenet-gateway.service
flovenet-core/: Cargo.toml
flovenet-core/src/: lib.rs
graphql_api/: Cargo.toml
graphql_api/src/: auth.rs  lib.rs  schema.rs
identity/: Cargo.toml
identity/src/: keystore.rs  lib.rs
ipfs_layer/: Cargo.toml
ipfs_layer/src/: lib.rs
market_protocol/: Cargo.toml
market_protocol/src/: lib.rs
p2p_cache/: Cargo.toml
p2p_cache/src/: lib.rs
reputation_engine/: Cargo.toml
reputation_engine/src/: lib.rs
resource_manager/: Cargo.toml
resource_manager/src/: gpu.rs  lib.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
scripts/: build-android.sh  build-dashboard.sh  build-deb.sh
snap/: snapcraft.yaml
social_protocol/: Cargo.toml
social_protocol/src/: feed.rs  follow.rs  lib.rs  post.rs  profile.rs  store.rs
storage/: Cargo.toml
storage/src/: error.rs  hybrid.rs  lib.rs  local.rs  s3.rs
test_harness/: Cargo.toml
test_harness/src/: lib.rs  main.rs  scenarios.rs
test_reporter/: Cargo.toml
test_reporter/src/: main.rs
tests/: docker_integration_report.json  docker_integration_test.py
trust_graph/: Cargo.toml
trust_graph/src/: lib.rs
vm_runtime/: Cargo.toml
vm_runtime/src/: error.rs  lib.rs  wasmtime_runner.rs
wasm_images/feed_ranker/: Cargo.toml
wasm_images/feed_ranker/src/: lib.rs
wasm_images/moderator/: Cargo.toml
wasm_images/moderator/src/: lib.rs
web-dashboard/: index.html  package.json  vite.config.ts
web-dashboard/src/: App.tsx  index.css  main.tsx
web-dashboard/src/components/: Layout.tsx
web-dashboard/src/graphql/: queries.ts
web-dashboard/src/lib/: auth.ts  graphql-client.ts
web-dashboard/src/pages/: Dashboard.tsx  Feed.tsx  Login.tsx  Network.tsx  Profile.tsx  Register.tsx
