[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
base64.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
