[package]
name = "graphql_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
social_protocol = { path = "../social_protocol" }
identity = { path = "../identity" }
crypto = { path = "../crypto" }
storage = { path = "../storage" }
resource_manager = { path = "../resource_manager" }
tower-http = { workspace = true, features = ["cors"] }
hex.workspace = true
futures.workspace = true
async-stream = "0.3"
