[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
tracing.workspace = true
resource_manager = { path = "../resource_manager" }
reputation_engine = { path = "../reputation_engine" }

[dev-dependencies]
serde_json.workspace = true
chrono.workspace = true
