[package]
name = "social_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
cid.workspace = true
multihash.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
crypto = { path = "../crypto" }
identity = { path = "../identity" }
ed25519-dalek.workspace = true
storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3"
