[package]
name = "storage"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
cid.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
multihash.workspace = true
sha2.workspace = true
base64.workspace = true
attohttpc = "0.24"

[dev-dependencies]
tempfile = "3"
