[package]
name = "test_harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flovenet-test"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures.workspace = true
libp2p.workspace = true
chrono.workspace = true
clap.workspace = true
async-trait.workspace = true
