[package]
name = "vm_runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
